Stampati tutti i dischi

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="text-card">
             <h2>{{ album.title }}</h2>
             <h3>{{ album.author }}</h3>
-            <span>{{ album.genre }}</span>
+            <span>{{ album.genre }} - </span>
             <span>{{ album.year }}</span>
           </div>
         </div>
