--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 <body>
   <div id="root">
     <div class="container">
+      <div class="content-select">
+        <select class="" name="" >
+          <option v-for="genere in albums" value="">{{ genere.genre }}</option>
+
+        </select>
+      </div>
+    </div>
+    <div class="container">
       <div class="card" v-for="album in albums">
         <div class="content-card">
           <div class="img-card">
