Esercizio completato + bonus

--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
   <div id="root">
     <div class="container">
       <div class="content-select">
-        <select v-model="selezioneGenere">
+        <select v-model="selezioneGenere" @click="filtroGeneri">
           <option disabled value="">Seleziona un genere</option>
           <option>Tutti i generi</option>
-          <option>Jazz</option>
-          <option>Rock</option>
-          <option>Metal</option>
-          <option>Pop</option>
+          <option v-for="genere in newGenere">{{ genere }}</option>
         </select>
       </div>
       <div class="content-button">
@@ -28,7 +25,6 @@
       </div>
     </div>
     <div class="container">
-
       <div class="card" v-for="album in albums" v-if="album.genre == selezioneGenere || selezioneGenere === 'Tutti i generi'">
         <div class="content-card">
           <div class="img-card" :style="`background-image: url('${album.poster}')`">
