Esercizio completato + bonus

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </select>
       </div>
       <div class="content-button">
-        <button type="button" name="button" @click="ordinaAnno">Ordina per anno di uscita</button>
+        <button type="button" name="button" @click="ordinaAnno">Ordina per anno</button>
       </div>
     </div>
     <div class="container">
